# SysML-v2-API-MCP-Server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: commandlineargumentparser.cpp  commandlineargumentparser.hpp  globals.hpp  httpmcptransport.cpp  httpmcptransport.hpp  httptoolclient.cpp  httptoolclient.hpp  main.cpp  mcppromptregistry.hpp  mcpresourceregistry.hpp  mcpserver.cpp  mcpserver.hpp  mcptoolregistry.hpp  mcptransport.hpp  programoptions.hpp  stdinstdoutmcptransport.cpp  stdinstdoutmcptransport.hpp
src/sysmlv2/: sysmlv2apiclient.cpp  sysmlv2apiclient.hpp
srctest/: testdata.hpp  testsuite.cpp
